Several linter changes